--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div>
             <h3>Calculadora Mecânica</h3>
             <h5>Blaise Pascal</h5>
-            <p>Seu funcionamento era baseado no uso rodas interligadas e giravam na realização dos cálculos. Ele a construiu para ajudar seu pai...</p>
+            <p>Seu funcionamento era baseado no uso rodas interligadas e giravam na realização dos cálculos. Ele a construiu para ajudar seu pai Étienne Pascal, na sua profissão...</p>
             <a href="page-content/calculadora-mecanica.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
@@ -181,7 +181,7 @@
             <h3>Válvulas</h3> 
             <h5>Fleming</h5>
             <p>Além de trabalhar com tensões mais altas e também quentes (elas precisam ser aquecidas antes de entrarem em funcionamento e isso pode levar até mais de 1 minuto), as válvulas apresentam outras diferenças...</p>
-            <a  href="page-content/valvulas.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/valvulas.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li><span>0</span>
@@ -254,7 +254,7 @@
             <h3>Electronic Discrete Variable Automatic Computer (EDVAC)</h3>
             <h5>Ballistic Research Laboratory U. S.</h5>
             <p>[...]foi um dos primeiros computadores eletrônicos. Ao contrário do ENIAC, não era decimal, mas binários e foi o primeiro programa concebido para ser armazenado...</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/edvac.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li class="off"><span>1</span>
@@ -262,7 +262,7 @@
             <h3>Whirlwind</h3>
             <h5>Instituto de Tecnologia de Massachusetts (MIT)</h5>
             <p>É o primeiro computador que operava em tempo real, utilizada para a produção e exibição de vídeo, e o primeiro que não era simplesmente um substituto eletrônico dos mais velhos...</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/whirlwind.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li><span>0</span>
@@ -270,7 +270,7 @@
             <h3>Eletronic Delay Storage Automatic Computer (EDSAC)</h3>
             <h5>Maurice Wilkes</h5>
             <p>Os primeiros a utilizarem o conceito de programa armazenado foram o EDSAC – Eletronic Delay Storage Automatic Computer, construído na Inglaterra em 1949 e alguns meses depois o EDVAC – Eletronic Discrete Variable...</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/edsac.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
          <li class="off"><span>1</span>
@@ -438,7 +438,7 @@
             <h3>Circuitos Integrados</h3>
             <h5>Geoffrey WA Dummer</h5>
             <p>Circuito integrado (ou simplesmente C.I.) é um circuito eletrônico que incorpora miniaturas de diversos componentes (principalmente transistores, diodos, resistores e capacitores), "gravados" em...</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/circuitos-integrados.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li><span>0</span>
@@ -598,7 +598,7 @@
             <h3>Computação Móvel</h3> 
             <h5>Histórico</h5>
             <p>A história da computação móvel é confusa e nebulosa. Até mesmo a própria definição de “computação móvel” e “dispositivo móvel” está até hoje sujeita a debates. Mas, assim como muitas tecnologias na área de computação e...</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/computacao-movel.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li class="finale"></li>
