--- a/page-content/maquina-turing.html
+++ b/page-content/maquina-turing.html
@@ -40,7 +40,7 @@
 
   <article>
     <div class="container clearfix">
-        <p style="margin-top: 62px;">Alan Turing foi um incrível matemático, lógico e criptoanalista, cujos estudos e projetos se tornaram base para a tecnologia atual. Sua máquina é um dispositivo imaginário que formou a estrutura para fundamentar a ciência da computação moderna.</p>
+        <p class="first" style="margin-top: 80px;">Alan Turing foi um incrível matemático, lógico e criptoanalista, cujos estudos e projetos se tornaram base para a tecnologia atual. Sua máquina é um dispositivo imaginário que formou a estrutura para fundamentar a ciência da computação moderna.</p>
         <p>Seu inventor, o matemático Alan Mathison Turing, mostrou que a computação das operações de leitura, escrita e exclusão de símbolos binários poderiam ser satisfeitas por uma máquina que continha uma fita de comprimento ilimitado, com quadrados de tamanho definido sobre ela e um dispositivo com um número finito de estados, que realizava as operações na fita. </p>
         <p>Em 1936 foi formalizado o termo algoritmo: um conjunto finito de instruções simples e precisas, que são descritas com um número finito de símbolos.</p>
         <p style="margin-bottom: 180px;">O conceito de máquina de Turing é semelhante ao de uma fórmula ou equação. Assim, há uma Infinidade de possíveis máquinas de Turing, cada uma correspondendo a um método definido ou algoritmo. Turing propôs que cada algoritmo, formalizado como um conjunto finito de instruções bem definidas, pudesse ser interpretado e executado por um processo mecânico.</p>
