--- a/page-content/semicondutores.html
+++ b/page-content/semicondutores.html
@@ -40,7 +40,7 @@
 
   <article>
     <div class="container clearfix">
-        <p style="margin-top: 62px;">Seu emprego é importante na fabricação de componentes eletrônicos tais como diodos, transístores e outros de diversos graus de complexidade tecnológica, microprocessadores, e nanocircuitos usados em nanotecnologia. Portanto atualmente o elemento semicondutor é primordial na indústria eletrônica e confecção de seus componentes. </p>
+        <p class="first" style="margin-top: 80px;">Seu emprego é importante na fabricação de componentes eletrônicos tais como diodos, transístores e outros de diversos graus de complexidade tecnológica, microprocessadores, e nanocircuitos usados em nanotecnologia. Portanto atualmente o elemento semicondutor é primordial na indústria eletrônica e confecção de seus componentes. </p>
         <p>Em 1874, Braun descobriu o efeito semicondutor em alguns sulfetos metálicos. Os primeiros elementos estudados foram o sulfeto de chumbo e o sulfeto de ferro. Em 1878 e 1879 David E. Hughes iniciou pesquisas no efeito semicondutor, a princípio como curiosidade, pois foi percebido ao acaso pelo cientista.</p>
         <p>Embora Hughes não conhecesse o trabalho de James Clerk Maxwell, descobriu uma maneira de emitir ondas eletromagnéticas a partir de semicondutores. Em função de suas experiências acabou por inventar o detector eletromagnético por efeito semicondutivo, o diodo.</p>
         <p style="margin-bottom: 180px;">Em 1929, Walter Schottky, confirmou experimentalmente a existência de uma barreira de potêncial numa junção Metal-Semicondutor.</p>
