--- a/page-content/whirlwind.html
+++ b/page-content/whirlwind.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="keywords" content="museu, digital, computação, tecnologia, história, gerações, invenções, museum, digital, computer, technology, history, generations, inventions" />
     <meta name="author" content="1º Período Sistemas de Informação - ITPAC Araguaína" />
-    <title>Interpretadores - Museu Digital da Computação</title>
+    <title>Whirlwind - Museu Digital da Computação</title>
     <!-- Favicons -->
     <link rel="icon" href="images/favicon/favicon-32x32.png" sizes="32x32">
     <!-- Fonts -->
@@ -27,12 +27,12 @@
       <div class="back">
         <a href="javascript:window.history.go(-1)">
           <i class="material-icons">keyboard_return</i>
-          <span>Voltar para o ínicio</span>
+          <span>Voltar para o ínício</span>
         </a>
       </div>
       <div class="container clearfix">
-        <h1>Interpretadores</h1>
-        <h3></h3>
+        <h1>Whirlwind</h1>
+        <h3>Instituto de Tecnologia de Massachusetts (MIT)</h3>
       </div>
     </div>
   </header>
@@ -40,8 +40,9 @@
 
   <article>
     <div class="container clearfix">
-        <p class="first" style="margin-top: 80px;">Interpretadores são programas de computador que leem um código fonte de uma linguagem de programação interpretada e o converte em código executável. Seu funcionamento pode variar de acordo com a implementação. Em alguns casos, o interpretador lê linha-por-linha e converte em código objeto (ou bytecode) à medida que vai executando o programa e, em outros casos, converte o código fonte por inteiro e depois o executa.</p>
-    </div>    
+        <p class="first" style="margin-top: 80px;">O computador Whirlwind foi desenvolvido pelo Instituto de tecnologia de Massachusetts. É o primeiro computador que operava em tempo real, utilizada para a produção e exibição de vídeo, e o primeiro que não era simplesmente um substituto eletrônico dos mais velhos sistemas mecânicos. Seu desenvolvimento virou-se diretamente para a Força Aérea dos Estados Unidos e (SAGE), e indiretamente, para quase todos os negócios minicomputadores e computadores na década de 1960.</p>
+        <p style="margin-bottom: 180px;">Durante a II Guerra Mundial, os E.U.A e a Marinha MIT abordaram sobre a possibilidade de criação de um computador para conduzir um simulador de vôo para treinamento de bombardeiro tripulações. Eles desenvolveram um sistema bastante simples em que o computador seria atualizado continuamente por um simulador usando um instrumento de painel baseado no controlo de entradas dos pilotos. Diferentemente dos sistemas mais antigos como o Link Trainer, o sistema previa que teria uma aerodinâmica muito mais realista e o modelo poderia ser adaptado a qualquer tipo de avião.</p>
+    </div>
   </article>
   <a href="#" class="scrollTop"><i class="material-icons">keyboard_arrow_up</i></a>
 
@@ -50,8 +51,8 @@
       <span class="loved">Desenvolvido com<i class="fa fa-heart"></i>pelo 1º Período do curso de Sistemas de Informação ITPAC</span>
     </div>
   </footer>
-  
-  
+
+
   <!-- Scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script>if (!window.jQuery) { document.write('<script src="https://code.jquery.com/jquery-2.1.4.min.js"><\/script>'); }</script>
@@ -59,7 +60,7 @@
     $(document).ready(function () {
         $(window).scroll(function () {
             if ($(this).scrollTop() > 200) {
-                $('.scrollTopollTop')').fadeIn();
+                $('.scrollTop').fadeIn();
             } else {
                 $('.scrollTop').fadeOut();
             }
@@ -74,4 +75,4 @@
   </script><!-- Scroll to top -->
   <script src="../js/materialize.min.js"></script>
 </body>
-</html>    
+</html>
