--- a/page-content/edsac.html
+++ b/page-content/edsac.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="keywords" content="museu, digital, computação, tecnologia, história, gerações, invenções, museum, digital, computer, technology, history, generations, inventions" />
     <meta name="author" content="1º Período Sistemas de Informação - ITPAC Araguaína" />
-    <title>Interpretadores - Museu Digital da Computação</title>
+    <title>EDSAC - Museu Digital da Computação</title>
     <!-- Favicons -->
     <link rel="icon" href="images/favicon/favicon-32x32.png" sizes="32x32">
     <!-- Fonts -->
@@ -27,12 +27,12 @@
       <div class="back">
         <a href="javascript:window.history.go(-1)">
           <i class="material-icons">keyboard_return</i>
-          <span>Voltar para o ínicio</span>
+          <span>Voltar para o ínício</span>
         </a>
       </div>
       <div class="container clearfix">
-        <h1>Interpretadores</h1>
-        <h3></h3>
+        <h1>EDSAC computador com programa armazenado.</h1>
+        <h3>Maurice Wilkes</h3>
       </div>
     </div>
   </header>
@@ -40,8 +40,10 @@
 
   <article>
     <div class="container clearfix">
-        <p class="first" style="margin-top: 80px;">Interpretadores são programas de computador que leem um código fonte de uma linguagem de programação interpretada e o converte em código executável. Seu funcionamento pode variar de acordo com a implementação. Em alguns casos, o interpretador lê linha-por-linha e converte em código objeto (ou bytecode) à medida que vai executando o programa e, em outros casos, converte o código fonte por inteiro e depois o executa.</p>
-    </div>    
+        <p class="first" style="margin-top: 80px;">Em meados de 1946, realizaram uma série de conferências de grande audiência sobre o computador eletrônico, na própria Escola Moore. Um dos membros que assistiam às preleções, um cientista inglês chamado Maurice Wilkes, estava particularmente intrigado pela descrição que fizeram do armazenamento do programa planejado para o E DVAC. Voltou para casa, na Universidade de Cambridge e, em 1949 - dois anos antes que ficasse pronto o EDVAC - terminou a construção do primeiro computador operacional em larga escala de programa armazenado do mundo (já havia um computador prototípico de programa armazenado, o Manchester Mark I, de 1948), o EDSAC, Calculadora Automática com Armazenamento por Retardo Eletrônico (Electronic Delay Storage Automatic Calculator), que marcou o último grande passo na série de avanços decisivos inspirados pela guerra.</p>
+        <p style="margin-bottom: 180px;">O primeiro computador de programa armazenado. Esta técnica de usar uma "memória de armazenamento" assim como a "transferência de controle por condição", que permitiam parar e reiniciar o processamento a qualquer instante, abriu enorme perspectiva para a programação de computadores. O elemento chave dessa arquitetura era a unidade central de processamento, que permitia a coordenação de todas as funções do computador através de uma única fonte.
+</p>
+    </div>
   </article>
   <a href="#" class="scrollTop"><i class="material-icons">keyboard_arrow_up</i></a>
 
@@ -50,8 +52,8 @@
       <span class="loved">Desenvolvido com<i class="fa fa-heart"></i>pelo 1º Período do curso de Sistemas de Informação ITPAC</span>
     </div>
   </footer>
-  
-  
+
+
   <!-- Scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script>if (!window.jQuery) { document.write('<script src="https://code.jquery.com/jquery-2.1.4.min.js"><\/script>'); }</script>
@@ -59,7 +61,7 @@
     $(document).ready(function () {
         $(window).scroll(function () {
             if ($(this).scrollTop() > 200) {
-                $('.scrollTopollTop')').fadeIn();
+                $('.scrollTop').fadeIn();
             } else {
                 $('.scrollTop').fadeOut();
             }
@@ -74,4 +76,4 @@
   </script><!-- Scroll to top -->
   <script src="../js/materialize.min.js"></script>
 </body>
-</html>    
+</html>
