--- a/Nova pasta/index.html
+++ b/Nova pasta/index.html
@@ -17,11 +17,11 @@
         <link href="css/header.css" media="all" rel="stylesheet" type="text/css">
         <link href="css/home/fullscreen-cover.css" media="all" rel="stylesheet" type="text/css">
         <link href="css/home/timeline.css" media="all" rel="stylesheet" type="text/css">
-        <link href="css/page-header.css" media="all" rel="stylesheet" type="text/css">
-        <link href="css/page-content/page-content.css" media="all" rel="stylesheet" type="text/css">
         <link href="css/footer.css" media="all" rel="stylesheet" type="text/css">
         <link href="css/materialize.min.css" media="all" rel="stylesheet" type="text/css">
         <link href="css/Roboto.css" media="all" rel="stylesheet" type="text/css">
+        <link href="css/page-header.css" media="all" rel="stylesheet" type="text/css">
+        <link href="css/page-content/page-content.css" media="all" rel="stylesheet" type="text/css">
     </head>
     <body style="">
         <div id="app">
@@ -62,8 +62,8 @@
                         <div id="main">
                             <nav id="menu" class="toggle-nav">
                                 <ul class="toggle-nav">
+                                    <li><a href="#">&nbsp&nbspInício</a></li>
                                     <li><a href="#">&nbsp&nbspSobre</a></li>
-                                    <li><a href="#">&nbsp&nbspReferências</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -119,7 +119,7 @@
                         <div class="back">
                             <a href="#" @click="showview(0,0)">
                                 <i class="material-icons">keyboard_return</i>
-                                <span>Voltar para o início</span>
+                                <span>Voltar para o </span>
                             </a>
                         </div>
                         <div class="container clearfix">
@@ -132,7 +132,9 @@
 
                 <article>
                     <br>
-                    <div class="container clearfix" v-html="pageContent.conteudo" style="margin-top: 60px; margin-bottom: 140px;">
+                    <br>
+                    <br>
+                    <div class="container clearfix" v-html="pageContent.conteudo">
                     </div>
                 </article>
                 <a href="#" class="scrollTop"><i class="material-icons">keyboard_arrow_up</i></a>
@@ -158,7 +160,7 @@
 $(document).ready(function () {
     $(window).scroll(function () {
         searchBox = $(window).scrollTop();
-        if (searchBox > 1100) {
+        if (searchBox > document.getElementById('timeline')) {
             $('.search-box').fadeIn();
         } else {
             $('.search-box').fadeOut();
